--- a/src/components/merch-page/merch-grid/MerchGrid.css
+++ b/src/components/merch-page/merch-grid/MerchGrid.css
@@ -1,7 +1,7 @@
 .merch-grid {
   max-width: 1200px;
   margin-top: 5rem;
-  margin-bottom: 0;
+  margin-bottom: 0rem;
   margin-left: auto;
   margin-right: auto;
 }
